# rust-azure-functions

./: .gitignore  Cargo.toml  README.md
echo/: Cargo.toml  host.json
echo/src/: main.rs
hello-world/: Cargo.toml  host.json
hello-world/src/: main.rs
with-identity/: Cargo.toml  host.json
with-identity/endpoint/: function.json
with-identity/src/: main.rs
